@@ -39,8 +39,8 @@ build_script:
   - ps: 'New-Item -Path Env: -Name VERSION -Value $(C:\Python38-x64\python.exe scripts\get_version.py)'
   - cmd: echo %VERSION% > build_version
   - ps: 'echo "Building branch $env:APPVEYOR_REPO_BRANCH - version $env:VERSION"'
-  - cmd: C:\Python38-x64\Scripts\pyinstaller --add-data "fastflix\data\encoders\*;fastflix\data\encoders" --add-data "fastflix\data\rotations\*;fastflix\data\rotations" --add-data "fastflix\data\icon.ico;fastflix\data" --add-data "CHANGES;fastflix\." --add-data "docs\build-licenses.txt;docs" --hidden-import=pyqt5 --hidden-import=requests --hidden-import="python-box" --hidden-import=reusables --hidden-import="pkg_resources.py2_warn"  fastflix\gui.py  --icon fastflix\data\icon.ico --name FastFlix --clean --onefile
-  - cmd: C:\Python38-x64\Scripts\pyinstaller --add-data "fastflix\data\encoders\*;fastflix\data\encoders" --add-data "fastflix\data\rotations\*;fastflix\data\rotations" --add-data "fastflix\data\icon.ico;fastflix\data" --add-data "CHANGES;fastflix\." --add-data "docs\build-licenses.txt;docs" --hidden-import=pyqt5 --hidden-import=requests --hidden-import="python-box" --hidden-import=reusables --hidden-import="pkg_resources.py2_warn"  fastflix\gui.py  --icon fastflix\data\icon.ico --name FastFlix --clean
+  - cmd: C:\Python38-x64\Scripts\pyinstaller --add-data "fastflix\data\encoders\*;fastflix\data\encoders" --add-data "fastflix\data\rotations\*;fastflix\data\rotations" --add-data "fastflix\data\icon.ico;fastflix\data" --add-data "CHANGES;fastflix\." --add-data "docs\build-licenses.txt;docs" --hidden-import=pyqt5 --hidden-import=requests --hidden-import="python-box" --hidden-import=reusables --hidden-import="pkg_resources.py2_warn" --hidden-import="psutil"  fastflix\__main__.py  --icon fastflix\data\icon.ico --name FastFlix --clean --onefile
+  - cmd: C:\Python38-x64\Scripts\pyinstaller --add-data "fastflix\data\encoders\*;fastflix\data\encoders" --add-data "fastflix\data\rotations\*;fastflix\data\rotations" --add-data "fastflix\data\icon.ico;fastflix\data" --add-data "CHANGES;fastflix\." --add-data "docs\build-licenses.txt;docs" --hidden-import=pyqt5 --hidden-import=requests --hidden-import="python-box" --hidden-import=reusables --hidden-import="pkg_resources.py2_warn" --hidden-import="psutil"  fastflix\__main__.py  --icon fastflix\data\icon.ico --name FastFlix --clean
   - cmd: '"C:\Program Files (x86)\NSIS\makensis.exe" FastFlix.nsi'
 
 after_build:
